--- a/templates/base.html
+++ b/templates/base.html
@@ -5,27 +5,7 @@
       <title>Chatterbox</title>
   </head>
   <body>
-    Hello World!
-
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-
-    <script type ="text/javascript" src="http://127.0.0.1:8001/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-      $(function () {
-        var socket = io.connect('http://127.0.0.1:8001');
-        $('form').submit(function(){
-          socket.emit('chat-message', $('#m').val());
-          $('#m').val('');
-          return false;
-        });
-        socket.on('chat-message', function(msg){
-          $('#messages').append($('<li>').text(msg));
-        });
-      });
-    </script>
+    {% block content %}
+    {% endblock %}
   </body>
 </html>
