End of day Commit

--- a/assets/styles/chatterbox.scss
+++ b/assets/styles/chatterbox.scss
@@ -1,3 +1,7 @@
+$catskillWhite : #eaf0f5;
+$alabaster : #F8F8F8;
+$pickledBluewood : #27344a;
+
 body {
-  background-color: #DDD;
+  background-color: $catskillWhite;
 }
