login/logout ajax

--- a/static/css/chatterbox.css
+++ b/static/css/chatterbox.css
@@ -5819,3 +5819,23 @@ body {
 
 #content {
   padding-top: 50px; }
+
+#ajax-auth {
+  margin-bottom: 0px; }
+  #ajax-auth li button {
+    margin-bottom: 8.5px;
+    margin-top: 8.5px; }
+
+.hidden {
+  display: none; }
+
+.match-btn {
+  font-size: 14px;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  line-height: 20px;
+  margin-top: 7px;
+  margin-bottom: 6px; }
+
+#welcome-message {
+  color: #FFF; }
