--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,13 @@
     {% endblock %}
     <script>
       var username;
+      var pk;
       var csrftoken;
+      var socket;
       $(document).ready(function() {
         {% if user.is_authenticated %}
           username = "{{ user.username }}";
+          pk = "{{ user.username }}";
           login();
         {% else %}
           logout();
@@ -77,11 +80,15 @@
         $("#welcome-message").html("Welcome, " + username);
         $(".login-nav").addClass("hidden");
         $(".logout-nav").removeClass("hidden");
+        socket = chatInit(username, pk);
       }
 
       function logout() {
         $(".logout-nav").addClass("hidden");
         $(".login-nav").removeClass("hidden");
+        if(socket != null) {
+          socket.disconnect();
+        }
       }
 
       function ajaxLogin() {
@@ -95,6 +102,7 @@
             if(x.login == 1) {
               console.log(x);
               username = x.username;
+              pk = x.pk;
               csrftoken = x.csrftoken;
               login();
             }
