--- a/templates/chat.html
+++ b/templates/chat.html
@@ -20,12 +20,13 @@
 
     var socket = io.connect('http://127.0.0.1:8001', {query: 'username=' +user+'&pk=' + id});
     $('#chatForm').submit(function(){
-      socket.emit('chat-message', $('#m').val());
+      var toSend = {msg: $('#m').val(), fromName: user, fromId: id};
+      socket.emit('chat-message', toSend);
       $('#m').val('');
       return false;
     });
     socket.on('chat-message', function(msg){
-      $('#messages').append($('<li>').text(msg));
+      $('#messages').append($('<li>').text(msg.fromName + ': ' + msg.msg));
     });
     return socket;
   }
